<?xml version="1.0"?>
<package format="2">
  <name>cris_navigation</name>
  <version>1.0.0</version>

  <description>Meta package that contains all packages of ROS Tutorial</description>
  <license>Apache License 2.0</license>

  <author email="zhichao.liu@ucr.com">Zhichao Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>libopencv-dev</depend>
  <depend>image_geometry</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>image_publisher</depend>
  <depend>plotjuggler_ros</depend>
  <depend>rviz</depend>
  <depend>find_object_2d</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>
  <depend>amcl</depend>
  <depend>move_base</depend>
  <depend>explore_lite</depend>

  <export>

  </export>
</package>
